// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload component render correctly with error 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-630 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="onFilesChange-mock-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-650 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-653"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload here
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-641"
        data-testid="onFilesChange-mock-upload"
        id="onFilesChange-mock-upload"
        multiple=""
        type="file"
      />
    </div>
    <div>
      <div
        class="Upload-file-642"
        data-testid="test-file"
      >
        <img
          alt="name"
          class="Upload-fileDisplay-645"
          src="url"
        />
        <div
          class="Upload-fileInfoWrapper-648"
        >
          <p
            class="MuiTypography-root Upload-filename-643 Typography-root-670 MuiTypography-body1"
            data-testid="typography"
          >
            name
          </p>
          <p
            class="MuiTypography-root Upload-fileSize-644 Typography-root-670 MuiTypography-body1"
            data-testid="typography"
          >
            0KB
          </p>
        </div>
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-661 iconButton IconButton-medium-667 IconButton-text-663 Upload-deleteIcon-647"
          data-testid="file-delete"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload component render correctly with error 2`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-630 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="onFilesChange-mock-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-650 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-653"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload here
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-641"
        data-testid="onFilesChange-mock-upload"
        id="onFilesChange-mock-upload"
        multiple=""
        type="file"
      />
    </div>
    <div>
      <p
        class="MuiFormHelperText-root Mui-error"
      >
        fieldIsRequiredError
      </p>
    </div>
  </div>
</div>
`;

exports[`Upload component render correctly with value 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-582 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="onFilesChange-mock-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-602 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-605"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload here
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-593"
        data-testid="onFilesChange-mock-upload"
        id="onFilesChange-mock-upload"
        multiple=""
        type="file"
      />
    </div>
    <div>
      <div
        class="Upload-file-594"
        data-testid="test-file"
      >
        <img
          alt="file1"
          class="Upload-fileDisplay-597"
          src="url"
        />
        <div
          class="Upload-fileInfoWrapper-600"
        >
          <p
            class="MuiTypography-root Upload-filename-595 Typography-root-622 MuiTypography-body1"
            data-testid="typography"
          >
            file1
          </p>
          <p
            class="MuiTypography-root Upload-fileSize-596 Typography-root-622 MuiTypography-body1"
            data-testid="typography"
          >
            0KB
          </p>
        </div>
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-613 iconButton IconButton-medium-619 IconButton-text-615 Upload-deleteIcon-599"
          data-testid="file-delete"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="Upload-file-594"
        data-testid="test-file"
      >
        <img
          alt="file2"
          class="Upload-fileDisplay-597"
          src="url"
        />
        <div
          class="Upload-fileInfoWrapper-600"
        >
          <p
            class="MuiTypography-root Upload-filename-595 Typography-root-622 MuiTypography-body1"
            data-testid="typography"
          >
            file2
          </p>
          <p
            class="MuiTypography-root Upload-fileSize-596 Typography-root-622 MuiTypography-body1"
            data-testid="typography"
          >
            0KB
          </p>
        </div>
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-613 iconButton IconButton-medium-619 IconButton-text-615 Upload-deleteIcon-599"
          data-testid="file-delete"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload component renders correctly 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-1 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="default-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-21 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-24"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-12"
        data-testid="default-upload"
        id="default-upload"
        multiple=""
        type="file"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`Upload component renders correctly on mobile 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-494 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="mobile-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-514 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-517"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload here
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-505"
        data-testid="mobile-upload"
        id="mobile-upload"
        multiple=""
        type="file"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`Upload component renders correctly with buttonLabel 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-41 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="default-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-61 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-64"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Choose files
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-52"
        data-testid="default-upload"
        id="default-upload"
        multiple=""
        type="file"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`Upload component renders correctly with defaultExpanded 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-81 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="default-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-104"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Choose files
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-92"
        data-testid="default-upload"
        id="default-upload"
        multiple=""
        type="file"
      />
    </div>
    <div />
  </div>
</div>
`;

exports[`Upload component renders correctly with description 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-121 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="upload-with-description"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-141 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-144"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        class="Upload-input-132"
        data-testid="upload-with-description"
        id="upload-with-description"
        multiple=""
        type="file"
      />
      <p
        class="MuiTypography-root Upload-mobileInstructions-131 Typography-root-161 MuiTypography-body1"
        data-testid="typography"
      >
        Please upload your images here
      </p>
    </div>
    <div />
  </div>
</div>
`;

exports[`Upload component renders correctly with restricted file types 1`] = `
<div>
  <div
    class="MuiFormControl-root Upload-root-169 MuiFormControl-fullWidth"
  >
    <div>
      <label
        for="restricted-upload"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root Button-root-189 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label Button-label-192"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
              />
            </svg>
            Upload
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </label>
      <input
        accept=".png,.pdf"
        class="Upload-input-180"
        data-testid="restricted-upload"
        id="restricted-upload"
        multiple=""
        type="file"
      />
    </div>
    <div />
  </div>
</div>
`;
